Enhance testing and improve code quality
Updated CI configurations to include unit test commands for coverage reports. Modified project files for detailed debugging and added new dependencies. Expanded test data models and improved test coverage across various components. Enhanced UI and business logic files for better user experience and functionality. Added new tests for reporting and list interactions.

--- a/EstateManagementUI/Pages/Shared/Profile/ProfileDropdown.cshtml
+++ b/EstateManagementUI/Pages/Shared/Profile/ProfileDropdown.cshtml
@@ -1,34 +1,16 @@
 @model ProfileDropdown
-@using System.Globalization
-@{
-    var givenName = User.Claims.SingleOrDefault(c => c.Type == "given_name");
-    var familyName = User.Claims.SingleOrDefault(c => c.Type == "family_name");
-    var userFullName = $"{givenName.Value} {familyName.Value}";
-
-    String registrationText = String.Empty;
-    var registrationDateClaim = User.Claims.SingleOrDefault(c => c.Type == "registration_date");
-    if (registrationDateClaim != null)
-    {
-        if (DateTime.TryParseExact(registrationDateClaim.Value, "yyyy-MM-dd HH:mm:ss.fff", null,DateTimeStyles.None, out DateTime registrationDate)) {
-            registrationText = $"Registered on {registrationDate.ToShortDateString()}";
-        }
-    }
-    else {
-        registrationText = $"Registered on Unknown";
-    }
-}
 
 <li class="nav-item dropdown user-menu">
     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
-        @* <img src="~/img/user2-160x160.jpg" class="user-image rounded-circle shadow" alt="User Image"> *@ <span class="d-none d-md-inline">@userFullName</span>
+        @* <img src="~/img/user2-160x160.jpg" class="user-image rounded-circle shadow" alt="User Image"> *@ <span class="d-none d-md-inline">@Model.UserFullName</span>
     </a>
     <ul class="dropdown-menu dropdown-menu-lg dropdown-menu-end">
         <!--begin::User Image-->
         <li class="user-header text-bg-secondary">
             @* <img src="~/img/user2-160x160.jpg" class="rounded-circle shadow" alt="User Image"> *@
             <p>
-                @userFullName
-                <small>@registrationText</small>
+                @Model.UserFullName
+                <small>@Model.RegistrationText</small>
             </p>
         </li> <!--end::User Image--> <!--begin::Menu Body-->
         <li class="user-footer">
