--- a/EstateManagementUI/Pages/Contract/ContractProduct/ContractProductsList.cshtml
+++ b/EstateManagementUI/Pages/Contract/ContractProduct/ContractProductsList.cshtml
@@ -1,4 +1,7 @@
-﻿@model ContractProductsList
+﻿@using EstateManagementUI.BusinessLogic.PermissionService.Constants
+@using Hydro.TagHelpers
+@using Microsoft.AspNetCore.Mvc.TagHelpers
+@model ContractProductsList
 
     <div class="card o-hidden border-0 shadow-sm my-5">
         <div class="card-body p-0">
@@ -8,6 +11,13 @@
                     <div class="p-5">
                         <div class="text-center">
                             <h1 class="h4 text-gray-900 mb-4">Contract Products for Contract @Model.ContractName</h1>
+                        </div>
+                        <div>
+                            @if(await Model.CanRenderButton(ApplicationSections.Contract, ContractFunctions.AddProduct)){
+                                <button class="btn btn-primary" type="button" hydro-action="NewContractProduct" id="newContractProductButton">
+                                    New Product
+                                </button>
+                            }
                         </div>
                         @if (Model.ContractProducts.Any() == false)
                         {
