fix for failing tests

--- a/EstateManagementUI/Pages/Components/FieldSelect.cshtml
+++ b/EstateManagementUI/Pages/Components/FieldSelect.cshtml
@@ -5,6 +5,7 @@
         <select
             hydro-bind
             name="@Model.Field.Name"
+            id="@Model.Id"
             autocomplete="off"
             class="peer inline-flex h-full w-full p-2 appearance-none items-center rounded-lg border border-input bg-main pe-8 ps-3 mt-1 text-sm text-main-foreground ring-offset-background transition-shadow hover:bg-accent shadow-sm focus-visible:border-ring focus-visible:text-main-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring/30 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50">
 
