--- a/EstateManagementUI/Pages/Merchant/MerchantDetails/NewMerchant.cshtml
+++ b/EstateManagementUI/Pages/Merchant/MerchantDetails/NewMerchant.cshtml
@@ -16,7 +16,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <label asp-for="SettlementScheduleId" class="form-label">Settlement Schedule</label>
-                        <field-select field="SettlementScheduleId" label="SettlementSchedule" options="@Model.GetSettlementSchedules()"/>
+                        <field-select field="SettlementScheduleId" label="SettlementSchedule" options="@Model.GetSettlementSchedules()" id="settlementSchedule" />
                     </div>
                 </div>
                 <div class="row">
