Add MakeDeposit functionality to ApiClient and UI
- Implemented MakeDeposit method in ApiClient for merchant deposits.
- Updated IApiClient interface and added MakeDepositModel for deposit data.
- Enhanced MerchantRequestHandler to process MakeDepositCommand.
- Created MakeDeposit Razor page and updated UI helpers for deposit interactions.
- Added tests and scenarios for deposit functionality in MerchantTests.feature.
- Integrated deposit event handling in MerchantPageEvents.

--- a/EstateManagementUI/Pages/Merchant/MerchantsList/MerchantList.Table.cshtml
+++ b/EstateManagementUI/Pages/Merchant/MerchantsList/MerchantList.Table.cshtml
@@ -65,7 +65,8 @@
                     TableDropdownItem[] menuItems = new TableDropdownItem[]
                     {
                 new("Edit", () => Model.Edit(@merchantModel.Id), (ApplicationSections.Merchant, MerchantFunctions.Edit), $@"{merchantModel.Name}Edit"),
-                new("View", () => Model.View(@merchantModel.Id), (ApplicationSections.Merchant, MerchantFunctions.View), $@"{merchantModel.Name}View")
+                new("View", () => Model.View(@merchantModel.Id), (ApplicationSections.Merchant, MerchantFunctions.View), $@"{merchantModel.Name}View"),
+                new("Make Deposit", () => Model.MakeDeposit(@merchantModel.Id), (ApplicationSections.Merchant, MerchantFunctions.MakeDeposit), $@"{merchantModel.Name}MakeDeposit")
                     };
                 }
 
