--- a/EstateManagementUI/Pages/Contract/ContractProduct/NewContractProduct.cshtml
+++ b/EstateManagementUI/Pages/Contract/ContractProduct/NewContractProduct.cshtml
@@ -38,7 +38,7 @@
                 </div>
                 <div class="text-end">
                     <button type="submit" class="btn btn-primary" id="saveContractProductButton">Save</button>
-                    <button type="button" class="btn btn-outline-secondary" hydro-action="Close" id="closeButton">Close</button>
+                    <button type="button" class="btn btn-outline-secondary" on:click="@(() => Model.Close())" id="closeButton">Close</button>
                 </div>
             </div>
         </form>
