--- a/EstateManagementUI/Pages/Contract/Contract/ViewContract.cshtml
+++ b/EstateManagementUI/Pages/Contract/Contract/ViewContract.cshtml
@@ -17,7 +17,7 @@
                     </div>
                 </div>
                 <div class="text-end">
-                    <button type="button" class="btn btn-outline-secondary" hydro-action="Close" id="closeButton">Close</button>
+                <button type="button" class="btn btn-outline-secondary" on:click="@(() => Model.Close())" id="closeButton">Close</button>
                 </div>
             </div>
     </div>
