--- a/EstateManagementUI/Pages/Contract/Contracts/ContractsList.cshtml
+++ b/EstateManagementUI/Pages/Contract/Contracts/ContractsList.cshtml
@@ -14,7 +14,7 @@
                     </div>
                     <div>
                         @if(await Model.CanRenderButton(ApplicationSections.Contract, ContractFunctions.New)){
-                            <button class="btn btn-primary" type="button" hydro-action="NewContract" id="newContractButton">
+                            <button class="btn btn-primary" type="button" on:click="@(() => Model.NewContract())" id="newContractButton">
                                 New Contract
                             </button>
                         }
