--- a/EstateManagementUI/Pages/Merchant/MerchantDetails/AddOperatorDialog.cshtml
+++ b/EstateManagementUI/Pages/Merchant/MerchantDetails/AddOperatorDialog.cshtml
@@ -5,7 +5,7 @@
             <form hydro-on:submit="@(() => Model.Save())">
                 <div class="modal-header">
                     <h5 class="modal-title">Assign Operator</h5>
-                    <button type="button" class="btn-close" aria-label="Close" hydro-action="Close"></button>
+                    <button type="button" class="btn-close" aria-label="Close" on:click="@(() => Model.Close())"></button>
                 </div>
 
                 <div class="modal-body">
@@ -31,7 +31,7 @@
                 <!--Modal Footer Start-->
                 <div class="modal-footer">
                     <button type="submit" class="btn btn-primary" id="saveMerchantOperatorButton">Assign Operator</button>
-                    <button type="button" class="btn btn-outline-secondary" hydro-action="Close" id="closeButton">Close</button>
+                    <button type="button" class="btn btn-outline-secondary" on:click="@(() => Model.Close())" id="closeButton">Close</button>
                 </div>
                 <!--Modal Footer End-->
             </form>
