--- a/EstateManagementUI/Pages/Merchant/MerchantDetails/ViewMerchant.cshtml
+++ b/EstateManagementUI/Pages/Merchant/MerchantDetails/ViewMerchant.cshtml
@@ -226,7 +226,7 @@
                         </div>
                     </div>
                     <div class="text-end">
-                        <button type="button" class="btn btn-outline-secondary" hydro-action="Close" id="closeButton">Close</button>
+                       <button type="button" class="btn btn-outline-secondary" on:click="@(() => Model.Close())" id="closeButton">Close</button>
                     </div>
                     </form>
                 </div>
