--- a/EstateManagementUI/Pages/Operator/OperatorDialogs/NewOperator.cshtml
+++ b/EstateManagementUI/Pages/Operator/OperatorDialogs/NewOperator.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="text-end">
                 <button type="submit" class="btn btn-primary" id="saveOperatorButton">Save</button>
-                <button type="button" class="btn btn-outline-secondary" hydro-action="Close" id="closeButton">Close</button>
+                <button type="button" class="btn btn-outline-secondary" on:click="@(() => Model.Close())" id="closeButton">Close</button>
             </div>
         </form>
     </div>
