my latest changes

--- a/EstateManagementUI.BlazorServer/Components/Pages/Home.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Home.razor
@@ -4,7 +4,7 @@
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @inject NavigationManager NavigationManager
 
-<PageTitle>Dashboard - Estate Management</PageTitle>
+<PageTitle>Dashboard</PageTitle>
 
 <div class="space-y-6">
     <!-- Page Header -->
