--- a/EstateManagementUI.BlazorServer/Components/Pages/EstateInfo.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/EstateInfo.razor
@@ -1,7 +1,7 @@
 @page "/estate-info"
 @layout Components.Layout.EntryLayout
 
-<PageTitle>Estate Management - Estate Management</PageTitle>
+<PageTitle>Estate Management - Information</PageTitle>
 
 <div class="min-h-screen bg-gray-50 flex flex-col">
     <div class="flex-1 flex items-center justify-center px-4 py-12">
