--- a/EstateManagementUI.BlazorServer/Components/Pages/FileInfo.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/FileInfo.razor
@@ -1,7 +1,7 @@
 @page "/file-info"
 @layout Components.Layout.EntryLayout
 
-<PageTitle>File Processing - Estate Management</PageTitle>
+<PageTitle>File Processing Information</PageTitle>
 
 <div class="min-h-screen bg-gray-50 flex flex-col">
     <div class="flex-1 flex items-center justify-center px-4 py-12">
