--- a/EstateManagementUI.BlazorServer/Components/Pages/MerchantInfo.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/MerchantInfo.razor
@@ -1,7 +1,7 @@
 @page "/merchant-info"
 @layout Components.Layout.EntryLayout
 
-<PageTitle>Merchant Management - Estate Management</PageTitle>
+<PageTitle>Merchant Management Information</PageTitle>
 
 <div class="min-h-screen bg-gray-50 flex flex-col">
     <div class="flex-1 flex items-center justify-center px-4 py-12">
