--- a/EstateManagementUI.BlazorServer/Components/Pages/Merchants/Edit.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Merchants/Edit.razor
@@ -580,7 +580,8 @@
             }
 
             successMessage = "Merchant details updated successfully";
-            await LoadMerchant();
+            // Navigate to edit page
+            NavigationManager.NavigateTo($"/merchants");
         }
         catch (Exception ex)
         {
