--- a/EstateManagementUI.BlazorServer/Components/Pages/Merchants/New.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Merchants/New.razor
@@ -242,7 +242,7 @@
 
             await Mediator.Send(scheduleCommand);
 
-            // Navigate to edit page
+            // Navigate to merchant list
             NavigationManager.NavigateTo($"/merchants");
         }
         catch (Exception ex)
