--- a/EstateManagementUI.BlazorServer/Components/Pages/Home.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Home.razor
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@using MediatR
 @using Microsoft.AspNetCore.Components.Authorization
 @using EstateManagementUI.BlazorServer.Permissions
 @using EstateManagementUI.BlazorServer.Requests
