--- a/EstateManagementUI.BlazorServer/Components/Pages/Home.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Home.razor
@@ -195,7 +195,7 @@
                                         <p class="text-sm text-gray-500">@merchant.MerchantReference</p>
                                     </div>
                                 </div>
-                                <a href="/merchants/view/@merchant.MerchantId" class="btn btn-sm btn-primary">View</a>
+                                <a href="/merchants/@merchant.MerchantId" class="btn btn-sm btn-primary">View</a>
                             </div>
                         }
                     </div>
